# mine-sweeper

./: .gitignore  CMake.sublime-build  CMakeLists.txt  LICENSE  README.md
include/: shader.hpp  utils.h
shader/: main.fs.glsl  main.vs.glsl
src/: main.cpp  shader.cpp  utils.cpp  utils.h
